added helper for customization

--- a/lib/generators/templates/_form.html.erb
+++ b/lib/generators/templates/_form.html.erb
@@ -1,4 +1,4 @@
-%h2= "#{<%= singular_instance_variable %>.new_record? ? 'Create' : 'Edit'} <%= human_name %>"
+= skinny_scaffold_form_header <%= singular_instance_variable %>
 
 = <%= form_builder_method %> <%= singular_instance_variable %> do |f|
   # Customize form
