--- a/lib/generators/templates/partials/default_table.html.erb
+++ b/lib/generators/templates/partials/default_table.html.erb
@@ -1,8 +1,8 @@
 %table
   %thead
     %tr
-      # Customize THEAD cells
+      - # Customize THEAD cells
   %tbody
     - <%= plural_instance_variable %>.each do |<%= singular_table_name %>|
       %tr
-        # Customize TBODY cells
+        - # Customize TBODY cells
