--- a/lib/generators/templates/partials/tabula_rasa_table.html.erb
+++ b/lib/generators/templates/partials/tabula_rasa_table.html.erb
@@ -1,2 +1,2 @@
-= tabula_rasa <%= plural_instance_variable %> do |table|
-  # Customize table
+= tabula_rasa <%= plural_instance_variable %> do |t|
+  - # Customize table
